--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Flowers</title>
+  <title> Mussada Portfolio </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- start google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-  <!-- end google fonts -->
+
   <link rel="stylesheet" href="assets/css/all.min.css"><!-- font-awesome -->
   <link rel="stylesheet" href="assets/css/animate.min.css"><!-- animate.css -->
   <link rel="stylesheet" href="assets/css/hover-min.css"><!-- hover.css -->
  
 </head>
-<body>
+<body style="height: 0; overflow-x: hidden;">
   <app-root></app-root>
   <script src='assets/js/popper.js'></script>
   <script src="assets/js/wow.min.js"></script>
